--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
 
       <!-- Product 2 (Active) -->
-      <div class="product-card active">
+      <div class="product-card">
         <div class="product-icons">
           <i class="fa fa-cart-shopping"></i>
           <i class="fa fa-heart"></i>
